[package]
name = "lclhst"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Share a running localhost app peer-to-peer — no server in the middle"
repository = "https://github.com/mfundo/lclhst"
keywords = ["p2p", "tunnel", "localhost", "iroh"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
iroh = { version = "=1.0.0-rc.1", default-features = false, features = ["tls-ring"] }
iroh-tickets = "=1.0.0-rc.1"
noq = "=1.0.0-rc.1"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
