[package]
name = "lclhst"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Share local apps and folders with other devices — over the LAN or peer-to-peer, no server in the middle"
repository = "https://github.com/fractalops/lclhst"
keywords = ["p2p", "tunnel", "localhost", "iroh", "mdns"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
fast_qr = "0.13.1"
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
iroh = { version = "=1.0.0-rc.1", default-features = false, features = ["tls-ring"] }
iroh-tickets = "=1.0.0-rc.1"
local-ip-address = "0.6.13"
mdns-sd = "0.20.0"
mime_guess = "2.0.5"
noq = "=1.0.0-rc.1"
percent-encoding = "2.3.2"
rcgen = { version = "0.14", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
env_logger = "0.11.10"
